--- a/ReactGL/ReactGL.vcxproj
+++ b/ReactGL/ReactGL.vcxproj
@@ -145,6 +145,8 @@
     <ClInclude Include="BodyObj.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameEventListener.h" />
+    <ClInclude Include="maths.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -154,6 +156,8 @@
     <ClCompile Include="BodyObj.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameEventListener.cpp" />
+    <ClCompile Include="maths.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ReactGL.cpp" />
     <ClCompile Include="stdafx.cpp">
