--- a/ReactGL/ReactGL.vcxproj
+++ b/ReactGL/ReactGL.vcxproj
@@ -141,30 +141,45 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Aim.h" />
     <ClInclude Include="Arrow.h" />
     <ClInclude Include="Bitmap.h" />
     <ClInclude Include="BodyObj.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Events.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameEventListener.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="LevelStraightFall.h" />
     <ClInclude Include="maths.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Rubbish.h" />
+    <ClInclude Include="Skydome.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vec3.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="Water.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Aim.cpp" />
     <ClCompile Include="Arrow.cpp" />
     <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="BodyObj.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Events.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameEventListener.cpp" />
+    <ClCompile Include="Level.cpp" />
+    <ClCompile Include="LevelStraightFall.cpp" />
     <ClCompile Include="maths.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ReactGL.cpp" />
+    <ClCompile Include="Rubbish.cpp" />
+    <ClCompile Include="Skydome.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -173,6 +188,7 @@
     </ClCompile>
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Water.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
